# gemstone_price_prediction

./: README.md  pyproject.toml
configs/: config.yaml  read_yaml.py
notebooks/: EDA.ipynb  Model_Training.ipynb
src/: exception.py
src/components/: data_ingestion.py  data_transformation.py
src/pipeline/: data_preparation.py  training_pipeline.py
