[tool.poetry]
name = "gemstone-price"
version = "0.1.0"
description = ""
authors = ["Dhruv Aggarwal <dhruv.aggarwal@protonmail.com>"]
readme = "README.md"
packages = [{include = "gemstone_price"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
